ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: simple-inventory-app
  name: microservice-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: app.femmieplato.com
    http:
      paths:
      - backend:
          service:
            name: frontend-service
            port:
              number: 3000
        path: /
        pathType: ImplementationSpecific
  - host: app.femmieplato.com
    http:
      paths:
      - backend:
          service:
            name: backend-service
            port:
              number: 8080
        path: /api
        pathType: ImplementationSpecific
